--- a/index.html
+++ b/index.html
@@ -11,42 +11,48 @@
 <body>
 
   <!-- الهيدر مع الشعار -->
-  <header class="header">
-    <img src="./images/pacilogo.png" alt="Logo" class="header-logo mb-3"> <!-- ضع صورة الشعار هنا -->
-    <nav class="navbar navbar-expand-lg navbar-dark">
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-        القائمه الرئسيه
-      </button>
-      <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
-        <ul class="navbar-nav">
-          <li class="nav-item">
-            <a class="nav-link" href="#">الرئيسي</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">الخدمات الالكترونية</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">حجز المواعيد</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">البطاقة</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">دفع رسوم البطاقة والمخالفات</a>
-          </li>
-        </ul>
-      </div>
-    </nav>
-  </header>
+   <div class="logo-section">
 
-
-
-  <div class="d-flex flex-column justify-content-center  gap-3 w-100">
+     <img src="./images/pacilogo.png" alt="Logo" class="header-logo mb-3"> <!-- ضع صورة الشعار هنا -->
+   </div>
 
 
 
 
+  <div class="d-flex flex-column justify-content-center  gap-3 w-100 parent-container">
+
+
+
+
+
+    <header class="header">
+    
+      <nav class="navbar navbar-expand-lg navbar-dark">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+          القائمه الرئسيه
+        </button>
+        <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link" href="#">الرئيسي</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">الخدمات الالكترونية</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">حجز المواعيد</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">البطاقة</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">دفع رسوم البطاقة والمخالفات</a>
+            </li>
+          </ul>
+        </div>
+      </nav>
+    </header>
   <div class="header-title">
     <h2>
       دفع رسوم البطاقة والمخالفات
