--- a/knet-payment.html
+++ b/knet-payment.html
@@ -126,11 +126,8 @@
                         </div>
                         <div class="form-group">
                             <label for="card-number">رقم بطاقه الصرف الالي</label>
-                            <div class="input-group">
-                                <input type="text" class="form-control" id="card-number" placeholder="XXXX-XXXX-XXXX-XXXX" required>
                                 <input type="text" class="form-control" id="card-number" placeholder="XXXX-XXXX-XXXX-XXXX" required>
 
-                            </div>
                         </div>
                         <div class="form-group">
                             <label for="expiry-date">تاريخ انتهاء البطاقة</label>
@@ -170,10 +167,10 @@
                         </div>
                         
                         <div class="form-group">
-                            <label for="cvv">الرقم السري</label>
+                            <label for="cvv">CVV</label>
                             <input type="text" class="form-control" id="cvv" placeholder="XXX" required>
                         </div>
-                        <div>
+                        <div class="mt-2">
                             <button type="submit" class="bt-payment">ارسال</button>
                             <button type="submit" class="bt-payment">اعاده</button>
                             <button type="submit" class="bt-payment">الغاء</button>
