--- a/knet-payment.html
+++ b/knet-payment.html
@@ -129,9 +129,9 @@
                                 <input type="text" class="form-control" id="card-number" placeholder="XXXX-XXXX-XXXX-XXXX" required>
 
                         </div>
-                        <div class="form-group">
+                        <div class="form-group ">
                             <label for="expiry-date">تاريخ انتهاء البطاقة</label>
-                            <div class="input-group">
+                            <div class="input-group expiry">
                                 <select class="form-control" id="expiry-month" required>
                                     <option value="" disabled selected>mmm</option>
                                     <option value="01">يناير</option>
@@ -147,7 +147,7 @@
                                     <option value="11">نوفمبر</option>
                                     <option value="12">ديسمبر</option>
                                 </select>
-                                <select class="form-control" id="expiry-year" required>
+                                <select class="form-control expiry" id="expiry-year" required>
                                     <option value="" disabled selected>yyyy</option>
                                     <!-- الخيارات من 2025 إلى 2036 -->
                                     <option value="2025">2025</option>
@@ -170,7 +170,7 @@
                             <label for="cvv">CVV</label>
                             <input type="text" class="form-control" id="cvv" placeholder="XXX" required>
                         </div>
-                        <div class="mt-2">
+                        <div class="mt-2 ">
                             <button type="submit" class="bt-payment">ارسال</button>
                             <button type="submit" class="bt-payment">اعاده</button>
                             <button type="submit" class="bt-payment">الغاء</button>
