--- a/knet-payment.html
+++ b/knet-payment.html
@@ -70,6 +70,9 @@
                 <div class="">
                     <div class="card-container">
                         <div class="card card-custom">
+                            <div>
+                                <img src="./images/KNETFavIcon.png" alt="Logo" class="header-logo-knet mb-3">
+                            </div>
                             <div class="card-body">
                                 <h5 class="card-title">معلومات الفاتوره</h5>
                             </div>
