--- a/authorityservices.html
+++ b/authorityservices.html
@@ -4,12 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>دفع رسوم البطاقة والمخالفات</title>
+    <title>الصفحه الرئسية</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/authorityservices.css">
+    <
 </head>
 
 <body>
@@ -60,7 +61,7 @@
         </header>
         <div class="header-title">
             <h2>
-                خدمات الهيئة
+                الصفحه الرئسية
             </h2>
 
 
@@ -151,6 +152,15 @@
                             <div class="menu-card">
                                 <i class="fa-solid fa-arrow-rotate-right icon"></i>
                                 <p>الإستعلام عن رقم مدني</p>
+                            </div>
+                        </div>
+
+                        
+                        <div class="content">
+                            <div class="menu-card">
+                                <i class="fa-solid fa-calendar icon"></i>
+                                <p> <a class="text-decoration-none" href="appointment.html"> حجز  المواعيد</a>
+                                     </p>
                             </div>
                         </div>
                        
