--- a/knet-payment.html
+++ b/knet-payment.html
@@ -59,8 +59,7 @@
             </nav>
         </header>
         <div class="header-title">
-            <h2>
-                خدمات الهيئة
+            <h2>دفع رسوم البطاقة والمخالفات           
             </h2>
 
 
