--- a/appointment.html
+++ b/appointment.html
@@ -14,21 +14,12 @@
 
     <!-- الهيدر مع الشعار -->
     <div class="logo-section">
-
         <img src="./images/pacilogo.png" alt="Logo" class="header-logo mb-3"> <!-- ضع صورة الشعار هنا -->
     </div>
 
-
-
-
-    <div class="d-flex flex-column justify-content-center  gap-3 w-100 parent-container">
-
-
-
-
+    <div class="d-flex flex-column justify-content-center gap-3 w-100 parent-container">
 
         <header class="header">
-
             <nav class="navbar navbar-expand-lg navbar-dark">
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -56,20 +47,16 @@
                 </div>
             </nav>
         </header>
-        <div class="header-title">
-            <h2>
-               حجز المواعيد
-            </h2>
 
+        <div class="header-title">
+            <h2>حجز المواعيد</h2>
 
             <!-- محتوى الصفحة الرئيسي -->
             <div class="container mt-4 content-pages">
-                <div class="card ">
+                <div class="card">
                     <form>
                         <div class="card-custom">
-
-
-                            <div class="card-body ">
+                            <div class="card-body">
                                 <div class="input-container">
                                     <label for="input1">الاسم بالكامل</label>
                                     <input type="text" id="input1">
@@ -86,46 +73,32 @@
                                 </div>
                             </div>
 
-                            <div class="card-body ">
+                            <div class="card-body">
                                 <div class="input-container">
-                                    <label for="input1">تاريخ الميلاد</label>
-                                    <input type="date" id="input1">
+                                    <label for="input4">تاريخ الميلاد</label>
+                                    <input type="date" id="input4">
                                 </div>
-
-                              
-
-
                             </div>
 
+                            <!-- زر الإرسال -->
+                            <div class="card-body text-center">
+                                <button type="submit" class="btn btn-primary mt-3">إرسال</button>
+                            </div>
                         </div>
-
-
-
-
-
                     </form>
-
                 </div>
             </div>
-
         </div>
 
-
         <!-- الفوتر -->
-        <footer class="footer bg-dark text-white text-center py-3 mt-4 ">
-            <p> &copy; الهيئة العامة للمعلومات المدنية 2024</p>
-
+        <footer class="footer bg-dark text-white text-center py-3 mt-4">
+            <p>&copy; الهيئة العامة للمعلومات المدنية 2024</p>
         </footer>
-
-
     </div>
-
 
     <!-- Bootstrap JavaScript -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.2/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-
-
-
+</body>
 </html>
