--- a/knet-payment.html
+++ b/knet-payment.html
@@ -111,7 +111,7 @@
                                
                                     <div class="form-group">
                                         <label for="card-number">رقم بطاقه الصرف الالي</label>
-                                        <input type="text" class="form-control" id="card-number"
+                                        <input id="card-number" maxlength="16" type="text" class="form-control" id="card-number"
                                             placeholder="**** **** **** ****" required>
 
                                     </div>
