--- a/authorityservices.html
+++ b/authorityservices.html
@@ -216,17 +216,50 @@
     });
 </script> -->
 
-    <script>
-        const menuCards = document.querySelectorAll('.menu-card');
-
-        menuCards.forEach(card => {
-            card.addEventListener('click', () => {
-                menuCards.forEach(c => c.classList.remove('active'));
-
-                card.classList.add('active');
-            });
+<script>
+    // إضافة حدث لكل زر من الأزرار الأخرى التي يجب أن تظهر الرسالة للمستخدم.
+    document.querySelectorAll('.menu-card').forEach(card => {
+        card.addEventListener('click', function () {
+            // إذا كان المستخدم لا يختار "حجز المواعيد"
+            if (card.id !== 'appointmentCard') {
+                // إظهار رسالة تطلب تجديد الهوية المدنية
+                showRenewIdentityModal();
+            }
         });
-    </script>
+    });
+
+    // دالة لإظهار الرسالة عبر Modal
+    function showRenewIdentityModal() {
+        // إنشاء HTML للـ modal الذي سيظهر للمستخدم
+        const modalHTML = `
+            <div class="modal fade" id="renewIdentityModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+                <div class="modal-dialog modal-dialog-centered" role="document">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h5 class="modal-title" id="exampleModalLongTitle">تجديد الهوية المدنية</h5>
+                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                <span aria-hidden="true">&times;</span>
+                            </button>
+                        </div>
+                        <div class="modal-body">
+                            <p>يجب تجديد الهوية المدنية أولاً قبل المتابعة إلى صفحة الرسوم.</p>
+                        </div>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-secondary" data-dismiss="modal">إلغاء</button>
+                            <a href="appointment.html" class="btn btn-primary">استمرار</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        `;
+
+        // إضافة modal إلى الـ body
+        document.body.insertAdjacentHTML('beforeend', modalHTML);
+
+        // عرض الـ modal
+        $('#renewIdentityModal').modal('show');
+    }
+</script>
 </body>
 
 </html>
