--- a/delaver.html
+++ b/delaver.html
@@ -72,29 +72,29 @@
                             <div class="card-body ">
                                 <div class="input-container">
                                     <label for="input1">الاسم</label>
-                                    <input type="text" id="input1">
+                                    <input  required type="text" id="input1">
                                 </div>
 
                                 <div class="input-container">
                                     <label for="input2">فتره التوصيل</label>
-                                    <input type="date" id="input2">
+                                    <input required type="date" id="input2">
                                 </div>
 
                                 <div class="input-container">
                                     <label for="input3">رقم الهاتف</label>
-                                    <input type="text" id="input3">
+                                    <input required type="text" id="input3">
                                 </div>
                             </div>
 
                             <div class="card-body ">
                                 <div class="input-container">
                                     <label for="input1">البريد الالكتروني</label>
-                                    <input type="text" id="input1">
+                                    <input required type="text" id="input1">
                                 </div>
 
                                 <div class="input-container">
                                     <label for="input2">اللغه المفضله للتوصل</label>
-                                    <input type="text" id="input2">
+                                    <input required type="text" id="input2">
                                 </div>
 
 
@@ -112,7 +112,7 @@
             
                                 <div class="input-container-radio">
                                     <input type="radio" id="enterAddress" name="address" onclick="toggleAddressFields(false)">
-                                    <label for="enterAddress">ادخال العنوان</label>
+                                    <label  for="enterAddress">ادخال العنوان</label>
                                 </div>
                             </div>
 
